--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dist"
   ],
   "scripts": {
+    "prepare": "npm run build",
     "build": "vite build && tsc",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
