--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,4 @@
 name: Publish to NPM
-on:
-  release:
-    types: [created]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +11,8 @@ jobs:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies and build 🔧
-        run: npm ci && npm run build
+        run: npm ci
+        run: npm run build
       - name: Publish package on NPM 📦
         run: npm publish
         env:
