--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
+//registry.npmjs.org/:_authToken=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
 @PrashantNegi878:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=TOKEN
+always-auth=true
