--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,3 +1,4 @@
+
 name: Publish Package to npmjs
 on:
   push:
@@ -16,4 +17,4 @@ jobs:
       - run: npm ci
       - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: 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
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
