--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org/'
           scope: '@prashantnegi878'
+      - run: npm login --registry=https://npm.pkg.github.com --scope=@prashantnegi878
       - run: npm ci
       - run: npm publish --access public
         env:
