--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -32,3 +32,20 @@ jobs:
      - run: npm publish
        env:
          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+         
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+     packages: write
+     contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org/'
+      - run: npm ci
+      - run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
