--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,34 +1,17 @@
 name: publish to npm
-
 on:
- release:
-   types: [created]
-
+  release:
+    types: [created]
 jobs:
- build:
-   runs-on: ubuntu-latest
-   steps:
-     - uses: actions/checkout@v3
-     - uses: actions/setup-node@v3
-       with:
-         node-version: 16
-     - run: npm ci
-     - run: npm test
-
- publish-gpr:
-   needs: build
-   runs-on: ubuntu-latest
-   permissions:
-     packages: write
-     contents: read
-   steps:
-     - uses: actions/checkout@v3
-     - uses: actions/setup-node@v3
-       with:
-         node-version: 16
-         registry-url: https://registry.npmjs.org/
-     - run: npm ci
-     - run: npm run build
-     - run: npm publish --access public
-       env:
-         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+        registry-url: 'https://registry.npmjs.org'
+    - run: npm install
+    - run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
