--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,4 +32,4 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=\${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
 
       - name: Publish to npm
-        run: npm publish --access public
+        run: npm ci && npm publish --access public
