--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @PrashantNegi878:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}
+# //npm.pkg.github.com/:_authToken=
