--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,5 +16,5 @@ jobs:
             - name: publish
               run: npm publish --access public
               env:
-                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
                   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
