--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-@PrashantNegi878:registry=https://registry.npmjs.org
+@PrashantNegi878:registry=https://npm.pkg.github.com
+# //npm.pkg.github.com/:_authToken=
