--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @PrashantNegi878:registry=https://npm.pkg.github.com
-# //npm.pkg.github.com/:_authToken=
+//npm.pkg.github.com/:_authToken=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
