--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,9 +11,10 @@ jobs:
             - name: node
               uses: actions/setup-node@v2
               with:
-                  node-version: 12
-                  registry-url: https://registry.npmjs.org
+                node-version: 12
+                registry-url: https://registry.npmjs.org
             - name: publish
               run: npm publish --access public
               env:
-                  NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
