--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,8 @@
 name: Publish package to NPM
 
 on:
-  push:
-    branches:
-        main
+  release:
+    types: [created]
 
 jobs:
   build:
@@ -32,7 +31,7 @@ jobs:
 
       - name: Publish the packages
         run: |
-          npm publish 
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
