--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -31,4 +31,5 @@ jobs:
      - run: npm run build
      - run: npm publish
        env:
-         NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+         
