--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,8 +1,9 @@
-name: Node.js Package
+name: Node.js Package to GITHUB
 
 on:
- release:
-   types: [created]
+  push:
+    branches:
+        main
 
 jobs:
  build:
@@ -15,7 +16,7 @@ jobs:
      - run: npm ci
      - run: npm test
 
- publish-gpr:
+ publish-to-github:
    needs: build
    runs-on: ubuntu-latest
    permissions:
@@ -32,4 +33,5 @@ jobs:
      - run: npm publish
        env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
          
