--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "name": "@prashantnegi878/quick-status",
   "private": false,
-  "version": "2.0.1",
-  "description": "Online Status Indicator",
+  "version": "2.0.2",
+  "description": "Online/Offline Status Indicator",
+  "keywords": [ 
+    "react",
+    "typescript",
+    "react-component",
+    "react-library",
+    "offline-indicator",
+    "status-popup",
+    "react-popup",
+    "typescript-library",
+    "web-development",
+    "frontend",
+    "ui-component",
+    "reactive",
+    "npm-package",
+    "user-experience"    
+  ],
   "main": "dist/index.umd.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
